# doc-index-service

./: .gitignore  .golangci.yml  ARCHITECTURE.md  Dockerfile.server  Makefile  README.md  docker-compose.yml  go.mod
.github/workflows/: ci.yml
bench/: README.md  bench.go
bench/results/: baseline-5k.json  bench-20260507-071619.json  bench-20260507-220545.json
cmd/bench-regress/: main.go  main_test.go
cmd/indexer/: main.go
cmd/server/: main.go
internal/api/: cursor.go  cursor_test.go  deps.go  errors.go  errors_test.go  fuzz_test.go  handlers.go  handlers_test.go  middleware.go  wire.go  wire_test.go
internal/chunker/: chunker.go  chunker_test.go
internal/rerank/: cross_encoder.go  cross_encoder_test.go  rerank.go  rerank_test.go
internal/search/: fuzz_test.go  hybrid.go  hybrid_test.go  mode_test.go  rrf.go  rrf_test.go  sanitize.go  sanitize_test.go
internal/seed/: seed.go  seed_test.go
internal/store/: queries.go  store.go  store_integration_test.go
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_tombstones.down.sql  0002_tombstones.up.sql
pkg/embed/: client.go  client_test.go
services/embed-sidecar/: Dockerfile  pyproject.toml
services/embed-sidecar/app/: __init__.py  embedder.py  main.py  reranker.py  settings.py
services/embed-sidecar/tests/: test_embedder.py  test_embedder_properties.py  test_main.py  test_reranker.py
